<package>
  <name>saw_maxon_controller</name>
  <version>0.0.1</version>
  <description>sawMaxonController</description>
  <maintainer email="hwei15@jhu.edu">Haochen Wei</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawGalilController</url>

  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
