<package>
  <name>saw_maxon_epos</name>
  <version>0.0.1</version>
  <description>sawMaxonEPOS</description>
  <maintainer email="hwei15@jhu.edu">Haochen Wei</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/</url>

  <build_depend>cisst</build_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
