<package>
  <name>saw_galil_controller_text_console</name>
  <version>0.0.1</version>
  <description>sawGalilController text console</description>
  <maintainer email="pkaz@jhu.edu">Peter Kazanzides</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawGalilController</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_galil_controller</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_galil_controller</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
